<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_school" />

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/logo_eazydigi_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/googlesans_bold"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textColor="@android:color/black"
                        android:textSize="42sp"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxLines="1"
                        android:text="@string/app_tagline"
                        android:textSize="14sp"
                        android:visibility="gone" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_school_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_school_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_fname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_mname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_mname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_lname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_father_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_fathername"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_mother_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_mothername"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_contact"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:paddingHorizontal="8dp">

                    <Spinner
                        android:id="@+id/spinner_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_pre_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_previous_school"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/bg_white_stroke_primary_rounded"
                    android:drawableRight="@drawable/ic_calendar"
                    android:hint="@string/hint_dob"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/googlesans_bold"
                    android:paddingVertical="8dp"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other" />

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/googlesans_bold"
                    android:paddingVertical="8dp"
                    android:text="Profession"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/rg_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_applicant"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/applicant" />

                    <RadioButton
                        android:id="@+id/rb_staff"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/staff" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:drawableLeft="@drawable/ic_warning"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/googlesans_bold"
                    android:paddingVertical="8dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_primary_rounded"
                    android:fontFamily="@font/googlesans_bold"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesans_bold"
                    android:text="@string/already_have_an_account"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/googlesans_bold"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>