<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_school" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo_eazydigi_black"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/googlesans_bold"
                    android:maxLines="1"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="42sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:text="@string/app_tagline"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_school_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/bg_white_stroke_primary_rounded"
                android:hint="@string/hint_school_code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/bg_white_stroke_primary_rounded"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/bg_white_stroke_primary_rounded"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/googlesans_bold"
                android:paddingVertical="8dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/googlesans_bold"
                android:drawableLeft="@drawable/ic_warning"
                android:drawablePadding="10dp"
                android:paddingVertical="8dp"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_primary_rounded"
                android:fontFamily="@font/googlesans_bold"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesans_bold"
                android:text="@string/dont_have_account"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/googlesans_bold"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesans_regular"
                android:text="powered by"
                android:textColor="#000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_4"
                android:scaleType="fitXY"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>